test/errors/auto_cast_struct_mismatch.haste
const A = struct { x: int; };
const B = struct { x: int; };
const a: A = cast B{ x: 1 };
